--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-scroll": "^1.8.10",
     "daisyui": "^5.0.46",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
